fixed interactive mode connections